# central-kb

./: .gitignore  Dockerfile  Dockerfile.embed-server  README.md  docker-compose.yml  pyproject.toml
app/: db.py  dedup.py  drift.py  embed.py  main.py  models.py  okf.py  promote.py  search.py
kb_cli/: cli.py
scripts/: embed-server.py  run_dev.sh  seed.py
tests/: conftest.py  test_cli.py  test_db.py  test_dedup.py  test_drift.py  test_embed.py  test_main.py  test_okf.py  test_promote.py  test_search.py  test_seed.py
